# E-Yantra-2024

./: README.md
Task 1/: README.md
Task 1/Task_1a/WD_3354_task_1a/: README.md  WD_3354_task_1a.py  metadata.yaml  task_1a_0.db3
Task 1/Task_1b/: README.md  WD_3354_pico_controller.py  metadata.yaml  task_1b_0.db3
Task 1/Task_1c/: README.md  perspectivetransform.py
Task 2/: README.md
Task 2/Task_2a/: README.md  bit_map.py
Task 2/Task_2b/: CMakeLists.txt  PathPlanning.srv  README.md  package.xml  path_planning_service.py  pico_client_2b.py  pico_server_2b.py
Task 3/Task_3a/: README.md
